/*
 * TreeTank - Embedded Native XML Database
 * 
 * Copyright 2007 Marc Kramis
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * $Id$
 */

TreeTank 4.10.:
---------------
+ Safely switch between commits.
+ Session makes sure that there is only one session bound to some TreeTank
  file at any time.
 
TreeTank 4.9:
-------------
+ Deprecated IAxisIterator and its implementing classes.
+ Added AbstractAxis and its subclasses to support Java 5 enhanced for loops
  and iterators.
+ Renamed Session.getSession(...) to Session.beginSession(...).
+ Made sure that SessionConfiguration always binds to absolute path.
 
TreeTank 4.8:
------------
+ Added changes.txt to document major changes in APIs and binary format.